// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Circle should render 1`] = `
<div>
  <div
    class="Circle__CircleWrapper-uw7h4j-0 QLprd ring-theme-background"
  />
</div>
`;

exports[`Circle should render as avatar 1`] = `
<div>
  <div
    class="Circle__CircleWrapper-uw7h4j-0 dtaias ring-theme-background"
  />
</div>
`;

exports[`Circle should render as blank 1`] = `
<div>
  <div
    class="Circle__CircleWrapper-uw7h4j-0 QLprd ring-theme-background"
  />
</div>
`;

exports[`Circle should render extra-large 1`] = `
<div>
  <div
    class="Circle__CircleWrapper-uw7h4j-0 gtDXrq ring-theme-background"
  />
</div>
`;

exports[`Circle should render large 1`] = `
<div>
  <div
    class="Circle__CircleWrapper-uw7h4j-0 bNDQMV ring-theme-background"
  />
</div>
`;

exports[`Circle should render small 1`] = `
<div>
  <div
    class="Circle__CircleWrapper-uw7h4j-0 byFmWC ring-theme-background"
  />
</div>
`;

exports[`Circle should render with content 1`] = `
<div>
  <div
    class="Circle__CircleWrapper-uw7h4j-0 byFmWC ring-theme-background"
  >
    <div
      data-testid="circle__content"
    />
  </div>
</div>
`;

exports[`Circle should render with no shadow 1`] = `
<div>
  <div
    class="Circle__CircleWrapper-uw7h4j-0 grnDUY ring-theme-background"
  />
</div>
`;
